# crypto_global_risk

./: .gitignore  README.md  pyproject.toml
docs/: 03_formula_to_code.md  block_gfevd.md  data_sources.md  formula_to_code.md  hypotheses_and_artifacts.md  math_metrics.md
examples/: run_metrics.py
src/calculations/: __init__.py  artifacts.py  ci_analysis.py  config.py  gfevd_analysis.py  panels.py  plots.py  price_discovery.py  run_comparison_artifacts.py  run_pipeline.py  run_stability_artifacts.py  run_window_gifs.py  stability.py
src/metrics/: __init__.py  common.py  gfevd.py  gis.py  hasbrouck_proxy.py
src/parsers/: __init__.py  assets.py  binance.py  binance_us.py  checkpoint_download.py  download_second_data.py  download_usdt_usd.py  histdata.py  repair_binance_timestamps.py  storage.py
tests/calculations/: test_block_spillovers.py  test_ci_analysis.py  test_panels.py  test_price_discovery.py  test_stability.py  test_window_gifs.py
tests/metrics/: test_metrics_smoke.py
tests/parsers/: test_assets.py  test_binance.py  test_binance_us.py  test_checkpoint_download.py  test_download_second_data.py  test_histdata.py  test_storage.py
